Working on chat join
